--- a/kratownica/obliczenia.ipynb
+++ b/kratownica/obliczenia.ipynb
@@ -31,7 +31,9 @@
     "\n",
     "$ R_{ax} = R_bcos(45^\\circ) $\n",
     "\n",
-    "$ R_{ay} = -R_bcos(45^\\circ) + P_1 + P_2 $"
+    "$ R_{ay} = -R_bcos(45^\\circ) + P_1 + P_2 $\n",
+    "\n",
+    "$ Err = \\frac {|x_{pomiar} - x_{real}|} {x_{real}} $"
    ]
   },
   {
