--- a/kratownica/obliczenia.ipynb
+++ b/kratownica/obliczenia.ipynb
@@ -387,10 +387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(\"wyniki.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
